<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="homework">Homework</string>
    <string name="submit_the_group_project">Submit the group project</string>
    <string name="add_task">ADD TASK</string>
    <string name="active">Active</string>
    <string name="todo">TODO</string>
    <string name="header_active">ACTIVE</string>
    <string name="header_done">DONE</string>
    <string name="todo_notification_channel_id">todo_channel</string>
    <string name="todo_notification_channel_name">ToDoApp</string>
    <string name="todo_app_title">Tab to add todo note.</string>
    <string name="notification_title">TodoApp</string>
    <string name="todo_app_running">TodoApp is running...</string>
    <string name="exit">Exit</string>
    <string name="add_task_overlay">Add Task</string>
    <string name="task_title_overlay">Task Title</string>
    <string name="task_description_overlay">Task Description</string>
    <string name="cancel_overlay">CANCEL</string>
    <string name="add_overlay">ADD</string>


    <string name="add_note">Add Note</string>
    <string name="notification_channel_general">QuickNote</string>
    <string name="notification_text">Tap to add quick note.</string>
    <string name="notification_exit">Exit</string>

    <string name="permission_required_title">Permission Required</string>
    <string name="permission_required_text">Please enabled \'Draw over other apps\' permission for QuickNote to work correctly.</string>
    <string name="permission_required_open">Open Settings</string>
    <string name="permission_error_title">Permission Error</string>
    <string name="permission_error_text">Cannot open the settings screen for obtaining the required permission.</string>
    <string name="common_ok">OK</string>
</resources>